crates/nash-report/tests/can/snapshots/can__kinds__little_record_alias.snap
---
source: crates/nash-report/tests/can/kinds.rs
assertion_line: 151
description: "module Main exposing (..)\n\nimport Builtin exposing (..)\n\ntype alias acc = { total : int, seen : list Int }\n"
---
(
    [],
    [
        (
            "acc",
            Type,
            [],
        ),
    ],
)
