crates/nash-report/tests/can/snapshots/can__kinds__little_record_field_rejects_an_arrow_kind.snap
---
source: crates/nash-report/tests/can/kinds.rs
assertion_line: 679
description: "module Main exposing (..)\n\nimport Builtin exposing (..)\n\ntype alias record 'f 'a = { applied : 'f 'a, head : 'f }\n"
info: diagnostic
---
nash::names::kind_mismatch

  × Kind mismatch in field `head` of little record alias `record`.
   ╭─[src/Main.nash:5:53]
 4 │ 
 5 │ type alias record 'f 'a = { applied : 'f 'a, head : 'f }
   ·                                                     ──
   ╰────
  help: Expected kind `Type`, found `Type -> Type`.
