crates/nash-report/tests/can/snapshots/can__kinds__lowercase_alias_big_body.snap
---
source: crates/nash-report/tests/can/kinds.rs
assertion_line: 180
description: "module Main exposing (..)\n\nimport Builtin exposing (..)\n\ntype alias id = Int\n"
info: diagnostic
---
nash::names::representation_mismatch

  × This position requires `Little` in the lowercase name of alias `id`:
   ╭─[src/Main.nash:5:17]
 4 │ 
 5 │ type alias id = Int
   ·                 ───
   ╰────
  help: The type has `Big` representation, but `Little` admits Const or Term types.
        Change the type or the representation requirement.
