crates/nash-report/tests/can/snapshots/can__kinds__mutual_union_alias.snap
---
source: crates/nash-report/tests/can/kinds.rs
assertion_line: 129
description: "module Main exposing (..)\n\nimport Builtin exposing (..)\n\ntype Tree = Node (List Branch)\ntype alias Branch = Tree\n"
---
(
    [
        (
            "Tree",
            Type,
            [],
        ),
    ],
    [
        (
            "Branch",
            Type,
            [],
        ),
    ],
)
