crates/nash-report/tests/can/snapshots/can__kinds__narrowed_function_alias_rejects_const_parameter.snap
---
source: crates/nash-report/tests/can/kinds.rs
assertion_line: 647
description: "module Main exposing (..)\n\nimport Builtin exposing (..)\n\ntype alias fn ('a : Big) = 'a -> 'a\nf : fn int\nf x = x\n"
info: diagnostic
---
nash::names::representation_mismatch

  × This position requires `Big` in the annotation for `f`:
   ╭─[src/Main.nash:6:8]
 5 │ type alias fn ('a : Big) = 'a -> 'a
 6 │ f : fn int
   ·        ───
 7 │ f x = x
   ╰────
  help: The type has `Const` representation, but `Big` admits only Big types. Change the
        type or the representation requirement.
