crates/nash-report/tests/can/snapshots/can__kinds__narrowed_function_alias_rejects_const_parameter_in_let.snap
---
source: crates/nash-report/tests/can/kinds.rs
assertion_line: 655
description: "module Main exposing (..)\n\nimport Builtin exposing (..)\n\ntype alias fn ('a : Big) = 'a -> 'a\nf =\n    let\n        g : fn int\n        g x = x\n    in\n    g\n"
info: diagnostic
---
nash::names::representation_mismatch

  × This position requires `Big` in the annotation for `g`:
   ╭─[src/Main.nash:8:16]
 7 │     let
 8 │         g : fn int
   ·                ───
 9 │         g x = x
   ╰────
  help: The type has `Const` representation, but `Big` admits only Big types. Change the
        type or the representation requirement.
