crates/nash-report/tests/can/snapshots/can__kinds__nested_partial_constructor_application_is_well_kinded.snap
---
source: crates/nash-report/tests/can/kinds.rs
assertion_line: 768
description: "module Main exposing (..)\n\nimport Builtin exposing (..)\n\ntype app 'f 'a = App ('f 'a)\ntype w = W (app (app list) int)\n"
---
(
    [
        (
            "app",
            Arrow(
                Arrow(
                    Type,
                    Type,
                ),
                Arrow(
                    Type,
                    Type,
                ),
            ),
            [
                Apply {
                    head: Located {
                        region: Region {
                            start: Position {
                                line: 5,
                                column: 23,
                            },
                            end: Position {
                                line: 5,
                                column: 25,
                            },
                        },
                        value: Var(
                            "f",
                        ),
                    },
                    args: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 5,
                                    column: 26,
                                },
                                end: Position {
                                    line: 5,
                                    column: 28,
                                },
                            },
                            value: Var(
                                "a",
                            ),
                        },
                    ],
                },
            ],
        ),
        (
            "w",
            Type,
            [],
        ),
    ],
    [],
)
